fixed alignment and background

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,11 @@
 body {
   background-image: url("../images/1.jpg ");
   background-size: cover;
-  background-position: top;
+  /* background-position: center; */
   color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   margin-top: 80px;
-  
 }
 
 h1 {
@@ -18,6 +17,14 @@ h1 {
 
 img{
   width:80px;
+}
+
+p{
+  margin: 0;
+  font-size: 15px;
+  font-weight: 500;
+  color: #80ccdd;
+  
 }
 
 .container {
@@ -39,10 +46,10 @@ img{
 }
 
 .main {
-  border: 2px solid rgba(237, 229, 229, 1);
+  border: 2px solid rgb(244, 237, 237);
   padding: 10px 10px;
   margin: 0 auto;
-  background-color: rgba(237, 229, 229, 0.4);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .mainWeather {
@@ -59,7 +66,7 @@ img{
 }
 
 .dateTime h3{
-  font-size: 12px;
+  font-size: 15px;
   color: #e8ad26;
   font-weight: 500;
 }
@@ -70,8 +77,16 @@ img{
 }
 
 .forecast {
-  /* border-top: 2px solid grey; */
-  padding: 0 20px 20px 20px;
+  margin-top: 10px;
+  padding: 20px;
+}
+
+.forecastTemp,
+.forecastTemp p {
+  font-size: 18px;
+  color: white;
+  text-align: center;
+
 }
 
 .currentTemp {
@@ -82,7 +97,7 @@ img{
 
 .city,
 .fahrenheit {
-  color: #1271a0;
+  color: #80ccdd;
 }
 
 .search,
@@ -102,17 +117,6 @@ img{
   font-weight: 500;
 }
 
-.rainCloud,
-.rain,
-.cloudSun,
-.showers {
-  width: 90px;
-}
-
-.smallSun {
-  width: 100px;
-}
-
 a{
   font-weight: 500;
   color: #f9c548;
@@ -127,9 +131,4 @@ a:hover{
   color:white ;
 }
 
-p{
-  margin: 0;
-  font-size: 15px;
-  color: #1271a0;
-}
 
